--- a/Contracts/EnterSOI.cfg
+++ b/Contracts/EnterSOI.cfg
@@ -10,5 +10,5 @@ CONTRACT_TYPE
     // Type:      <a href="String-Type">string</a>
     // Required:  Yes
     //
-    title = Enter the SOI of
+    title = Enter the SOI of Hotra-A
 }
