--- a/KopernicusConfigs/Pumilio A/Sogan/Sogan.cfg
+++ b/KopernicusConfigs/Pumilio A/Sogan/Sogan.cfg
@@ -1,1 +1,20 @@
-//will add
+@Kopernicus:FOR[TerrasIgnotas]:AFTER[Kopernicus]
+{
+	name = Sogan
+	cacheFile = TerrasIgnotas/Cache/Sogan.bin
+	
+	DEBUG
+	{
+		exportMesh = true
+		update = true
+	}
+	Template
+	{
+		name = Jool
+	}
+	Properties
+	{
+		//A good start...
+	}
+	
+}
