--- a/KopernicusConfigs/Pumilio A/Sogan/Sogan.cfg
+++ b/KopernicusConfigs/Pumilio A/Sogan/Sogan.cfg
@@ -1,4 +1,4 @@
-@Kopernicus:FOR[TerrasIgnotas]:AFTER[Kopernicus]
+@Kopernicus:FOR[TerrasIgnotas]
 {
 	name = Sogan
 	cacheFile = TerrasIgnotas/Cache/Sogan.bin
@@ -15,6 +15,8 @@
 	Properties
 	{
 		//A good start...
+		radius = 2600000
+		description = Sogan. A very swirly planet with a masterfully crafted placeholder description.
 	}
 	
 }
