Batch of small changes

--- a/KopernicusConfigs/Pumilio A/Sogan/Sogan.cfg
+++ b/KopernicusConfigs/Pumilio A/Sogan/Sogan.cfg
@@ -16,7 +16,7 @@
 	{
 		//A good start...
 		radius = 2600000
-		description = Sogan. A very swirly planet with a masterfully crafted placeholder description.
+		description = #LOC_TerrasIgnotas_SoganD //#LOC_TerrasIgnotas_SoganD = Sogan. A very swirly planet with a masterfully crafted placeholder description.
 	}
 	
 }
