--- a/Localization/en-us.cfg
+++ b/Localization/en-us.cfg
@@ -3,5 +3,6 @@ Localization
   en-us
   {
     //add tags
+	#LOC_TerrasIgnotas_SoganD = Sogan. A very swirly planet with a masterfully crafted placeholder description.
   }
 }
