Fixed naming stuff

--- a/Development/Localization/en-us.cfg
+++ b/Development/Localization/en-us.cfg
@@ -3,6 +3,6 @@ Localization
   en-us
   {
     //add tags
-	#LOC_TerrasIgnotas_SoganD = Sogan. A very swirly planet with a masterfully crafted placeholder description.
+	#LOC_TerrasIgnotas_BoyuD = Boyu. A very swirly planet with a masterfully crafted placeholder description.
   }
 }
