Move stuff around so it makes more sense

--- a/Development/Localization/en-us.cfg
+++ b/Development/Localization/en-us.cfg
@@ -3,10 +3,10 @@ Localization
   en-us
   {
     
-	#LOC_TerrasIgnotas_BoyuD* = Boyu. A very swirly planet with a masterfully crafted placeholder description.
+	#LOC_TerrasIgnotas_BoyuD = Boyu. A very swirly planet with a masterfully crafted placeholder description.
 	
-	#LOC_TerrasIgnotas_HadronD* = Hadron is the closest neutron star to Kerbin, at about 121 light-years away. Due to Hadron's age, it's hypothesized that it may have caused the Kordovician Mass Extinction, which stripped off Kerbin's Ozone Layer, and henceforth killed 95% of all life on the planet. Any planets and potentially life that may have existed close around the old Hadron are now all gone, leaving behind the outer planets to roam and rummage around Hadron as it slowly dies.
+	#LOC_TerrasIgnotas_HadronD = Hadron is the closest neutron star to Kerbin, at about 121 light-years away. Due to Hadron's age, it's hypothesized that it may have caused the Kordovician Mass Extinction, which stripped off Kerbin's Ozone Layer, and henceforth killed 95% of all life on the planet. Any planets and potentially life that may have existed close around the old Hadron are now all gone, leaving behind the outer planets to roam and rummage around Hadron as it slowly dies.
 	
-	#LOC_TerrasIgnotas_GobekD* = In the Language of the Ancients, Gobek means "Center". Of course, it's impossible they knew there was a Black Hole at the center of the nearby star's orbits, right? Right?
+	#LOC_TerrasIgnotas_GobekD = In the Language of the Ancients, Gobek means "Center". Of course, it's impossible they knew there was a Black Hole at the center of the nearby star's orbits, right? Right?
   }
 }
