ex:b:ermintation time

--- a/Development/INSTANTIATOR/Gobek/Gobek_ScaledObjects.cfg
+++ b/Development/INSTANTIATOR/Gobek/Gobek_ScaledObjects.cfg
@@ -8,8 +8,8 @@ INSTANTIATOR
 		Shader = Unlit/Transparent //Can be any Unity shader, though only the main texture can be set currently
 		Rotation = 0, 0, 0 //Where X is the rotation offset on the X axis, Y on the Y axis, and Z on the Z axis
 		InvertNormals = false //Where X is either true or false. If true, textures will be drawn on the INSIDE of the object. If false, textures are drawn on the OUTSIDE.
-		Texture = TerrasIgnotas/INSTANTIATOR/Gobek/GobekDisk1 //Filepath to the main texture
-		Type = Billboard //Can be 'Billboard', 'Sphere' and 'Cube'
+		Texture = TerrasIgnotas/INSTANTIATOR/Gobek/GobekDisk1.png //Filepath to the main texture
+		Type = Cube //Can be 'Billboard', 'Sphere' and 'Cube'
 		IgnoreLight = false //Where X is either true or false. If true, solar panels will not be blocked by the scaled object. If false, the scaled object will block solar panels.
 	}
 }
