--- a/Development/KopernicusConfigs/INSTANTIATOR/Gobek/Gobek_Disk1.cfg
+++ b/Development/KopernicusConfigs/INSTANTIATOR/Gobek/Gobek_Disk1.cfg
@@ -7,9 +7,9 @@ INSTANTIATOR
 		Scale = 18000, 0.0001, 18000 
 		Shader = Unlit/Transparent 
 		Rotation = 0, 0, 0 
-		InvertNormals = 
-		Texture = X 
+		InvertNormals = false //Where X is either true or false. If true, textures will be drawn on the INSIDE of the object. If false, textures are drawn on the OUTSIDE.
+		Texture = X //Filepath to the main texture
 		Type = Billboard //Can be 'Billboard', 'Sphere' and 'Cube'
-		IgnoreLight = false //If true, solar panels will not be blocked by the scaled object. If false, the scaled object will block solar panels.
+		IgnoreLight = false //Where X is either true or false. If true, solar panels will not be blocked by the scaled object. If false, the scaled object will block solar panels.
 	}
 }
