updoot loc tags with lore stuff

--- a/Development/Localization/en-us.cfg
+++ b/Development/Localization/en-us.cfg
@@ -4,8 +4,28 @@ Localization
   {
     //add tags
 	#LOC_TerrasIgnotas_BoyuDescription = Boyu. A very swirly planet with a masterfully crafted placeholder description.
+	
 	#LOC_TerrasIgnotas_HadronDescription = Hadron is the closest neutron star to Kerbin, at about 121 light-years away. Due to Hadron's age, it's hypothesized that it may have caused the Kordovician Mass Extinction, which stripped off Kerbin's Ozone Layer, and henceforth killed 95% of all life on the planet. Any planets and potentially life that may have existed close around the old Hadron are now all gone, leaving behind the outer planets to roam and rummage around Hadron as it slowly dies.
+	
 	#LOC_TerrasIgnotas_GobekDescription = Gobek, which in the language of the Ancients means "Center", seems to be at the center off all the orbits of nearby stars. It's name's meaning could be a coincedence, or the Ancients could have known about this Supermassive Black Hole. MUST BE ALIENS THEN!!11ONE!
+	
+	#LOC_TerrasIgnotas_LinusQuote1 = "We looked up... and, for the first time, truly saw... a true destination... and above all, Science!"- Linus Kerman, Science Representative
 
+	#LOC_TerrasIgnotas_GeneQuote1 = "It had never been so clear... we were going to the stars, if the Kraken was in a good mood." - Gene Kerman, Director
+	
+	#LOC_TerrasIgnotas_BillQuote1 = "The edge of reality got closer" - Bill Kerman, Engineer
+
+	
+	#LOC_TerrasIgnotas_ValQuote1 = "All our lives we had been told it was never going to happen... but, what do you know, it is!"- Valentina Kerman, Command Pilot
+	
+	#LOC_TerrasIgnotas_BobQuote1 = "Our mission has never before been so important... we must go there"- Bob Kerman, Scientist, Lead Eloquence Guy
+	
+	#LOC_TerrasIgnotas_MortQuote1 = "Never before have we attempted such an expensive mission..."- Mortimer Kerman, Finances Manager
+	
+	#LOC_TerrasIgnotas_WaltQuote1 = "I think this'll make good PR"- Walt Kerman, Head of Public Relations
+	
+	#LOC_TerrasIgnotas_GusQuote1 = "The construction of this vessel will be a great challenge to build"- Gus Kerman, Head of Construction
+	
+	#LOC_TerrasIgnotas_JebQuote1 = "I like snacks." -Jebediah Kerman, Pilot
   }
 }
