Add stuff bc WBI is our peeps

--- a/Development/Localization/en-us.cfg
+++ b/Development/Localization/en-us.cfg
@@ -27,5 +27,9 @@ Localization
 	#LOC_TerrasIgnotas_GusQuote1 = "The construction of this vessel will be a great challenge to build"- Gus Kerman, Head of Construction
 	
 	#LOC_TerrasIgnotas_JebQuote1 = "I like snacks." -Jebediah Kerman, Pilot
+	
+	#LOC_TerrasIgnotas_AngelQuote0 = "Screw it, we'll just make our own version." - Wild Blue Industries
+	
+	#LOC_TerrasIgnotas_AngelQuote1 = "If you want to boldly go, we'll get you there."- Motto, Wild Blue Industries
   }
 }
