Add German translation of Hadron's description by @StollD

--- a/Development/Localization/en-us.cfg
+++ b/Development/Localization/en-us.cfg
@@ -8,4 +8,9 @@ Localization
 	#LOC_TerrasIgnotas_GobekDescription = Gobek, which in the language of the Ancients means "Center", seems to be at the center off all the orbits of nearby stars. It's name's meaning could be a coincedence, or the Ancients could have known about this Supermassive Black Hole. MUST BE ALIENS THEN!!11ONE!
 
   }
+  de-de
+  {
+	//Translated by Thomas P., aka TMSP, aka StollD
+	#LOC_TerrasIgnotas_HadronDescription = Hadron ist der von Kerbin aus gesehen nächste Neutronenstern, in einer Entfernung von ungefär 121 Lichtjahren. Aufgrund von Hadrons Alter wird vermutet, dass er für das kordovizische Massenaussterben verantwortlich sein könnte, bei dem Kerbins Ozonschicht zerstört, und 95% des Lebens auf dem Planeten ausgelöscht wurden. Alle inneren Planeten sowie potentielles Leben um Hadron sind nun verschwunden, die äußeren Planeten wandern weiterhin durch den Weltraum während Hadron langsam stirbt.
+  }
 }
