--- a/Development/KopernicusConfigs/Pumilio_A/Boyu/Boyu.cfg
+++ b/Development/KopernicusConfigs/Pumilio_A/Boyu/Boyu.cfg
@@ -70,6 +70,7 @@
 		altitude = 175000
 		enabled = true
 		oxygen = true
+		staticPressureASL = 709.275 
 		pressureCurve
 		{
 			key =	0	709.275	-2.3861032E-02	-2.3861032E-02
