tweaks and A NEW PLANNEEETTTTT

--- a/Development/KopernicusConfigs/Pumilio/Couran/Clarco.cfg
+++ b/Development/KopernicusConfigs/Pumilio/Couran/Clarco.cfg
@@ -3,17 +3,17 @@
 	//useOnDemand = true
 	Body
 	{
-		name = Couran
-		cacheFile = TerrasIgnotas/Cache/Couran.bin
+		name = Epochón
+		cacheFile = TerrasIgnotas/Cache/Epochon.bin
 		Template
 		{
-			name =
+			name = Tylo
 			removeAllPQSMods = true
 		}
 		
 		Properties
 		{
-			description = TBD
+			description = According to myth, Epochón "contains upon and within it Wisdom like bu Galaksi has not seen before or since". What secrets could the planet hold?
 
 			radius = 60500
 			geeASL = 1
@@ -63,11 +63,38 @@
 		{
 			Mods
 			{
-				VertexColorMap
+				HeightColorMap
 				{
-					map = TerrasIgnotas/PluginData/PumilioA/Couran/Couran_Color.png
+					blend = 0.7
 					enabled = true
-					order = 10
+					order = 11
+					LandClasses
+					{
+						Class
+						{
+							name = Low
+							altitudeStart = 0.0
+							altitudeEnd = 0.3
+							color = RGBA(0,0,255,1)
+							lerpToNext = true
+						}
+						Class
+						{
+							name = Mid
+							altitudeStart = 0.3
+							altitudeEnd = 0.6
+							color = RGBA(0,255,0,1)
+							lerpToNext = true
+						}
+						Class
+						{
+							name = High
+							altitudeStart = 0.6
+							altitudeEnd = 1.0
+							color = RGBA(255,0,0,1)
+							lerpToNext = false
+						}
+					}
 				}
 				
 				VertexHeightMap
