--- a/Development/KopernicusConfigs/PumilioSystem/Jac/Jac.cfg
+++ b/Development/KopernicusConfigs/PumilioSystem/Jac/Jac.cfg
@@ -4,7 +4,7 @@
 	{
 		name = Jac
 		cacheFile = TerrasIgnotas/Cache/Pumilio_A/Jac.bin
-		
+		identifier = TIPUMGAS1
 		DEBUG
 		{
 			exportMesh = true
@@ -54,7 +54,7 @@
 			fadeEnd = 0
 			Material
 			{
-				texture = TerrasIgnotas/PluginData/PumilioSystem/Jac/Jac_Color.png
+				texture = TerrasIgnotas/PluginData/PumilioSystem/Jac/Jac_Color.dds
 				rimPower = 4
 				rimBlend = 0.2
 				Gradient
