--- a/Development/Localization/en-us.cfg
+++ b/Development/Localization/en-us.cfg
@@ -11,29 +11,34 @@ Localization
 	
 	#LOC_TerrasIgnotas_EpochonDescription = According to myth, Epochón "contains upon and within it Wisdom like bu Galaksi has not seen before or since". What secrets could the planet hold?
 	
+	#LOC_TerrasIgnotas_JilDescription = Jil is a strange gas planet, as its atmosphere is an exact copy of that of a gas planet from the bad science-fiction movie <i>1138 Planets</i>. The color, however, is unique.
+	
+	#LOC_TerrasIgnotas_PLACEHOLDER = PLACEHOLDER
+	
+	#LOC_TERRASIGNOTAS_PlaceholderDescription = This is a very interesting planet. I wish I could tell you more, but this is a placeholder description, so I can't.
+	
 	//Quote Tags
-	#LOC_TerrasIgnotas_LinusQuote1 = "We looked up, and for the first time truly saw a destination, and above all, Science!"- Linus Kerman, Science Representative
+	#LOC_TerrasIgnotas_LinusQuote1 = "We looked up, and for the first time truly saw a destination, and above all, Science!"- Linus Kerman, Science Representative, Kerbal Space Program
 
-	#LOC_TerrasIgnotas_GeneQuote1 = "It had never been so clear... We were going to the stars, if the Kraken was in a good mood." - Gene Kerman, Director
+	#LOC_TerrasIgnotas_GeneQuote1 = "It had never been so clear... We were going to the stars, if the Kraken was in a good mood." - Gene Kerman, Flight Director, Kerbal Space Program
 	
-	#LOC_TerrasIgnotas_BillQuote1 = "The edge of reality got closer" - Bill Kerman, Engineer
+	#LOC_TerrasIgnotas_BillQuote1 = "The edge of reality got closer" - Bill Kerman, Engineer, Kerbal Space Program
 
 	
-	#LOC_TerrasIgnotas_ValQuote1 = "All our lives we had been told it was never going to happen, but what do you know, it is!"- Valentina Kerman, Command Pilot
+	#LOC_TerrasIgnotas_ValQuote1 = "All our lives we had been told it was never going to happen, but what do you know, it is!"- Valentina Kerman, Pilot, Kerbal Space Program
 	
-	#LOC_TerrasIgnotas_BobQuote1 = "Our mission has never before been so important. We must go there."- Bob Kerman, Scientist, Lead Eloquence Guy
+	#LOC_TerrasIgnotas_BobQuote1 = "Our mission has never before been so important. We must go there."- Bob Kerman, Scientist, Lead Eloquence Guy, Kerbal Space Program
 	
-	#LOC_TerrasIgnotas_MortQuote1 = "Never before have we attempted such an expensive mission."- Mortimer Kerman, Finances Manager
+	#LOC_TerrasIgnotas_MortQuote1 = "Never before have we attempted such an expensive mission."- Mortimer Kerman, Finances Manager, Kerbal Space Program
 	
-	#LOC_TerrasIgnotas_WaltQuote1 = "I think this'll make good PR, guys."- Walt Kerman, Head of Public Relations
+	#LOC_TerrasIgnotas_WaltQuote1 = "I think this'll make good PR, guys."- Walt Kerman, Head of Public Relations, Kerbal Space Program
 	
-	#LOC_TerrasIgnotas_GusQuote1 = "The construction of this vessel will be a great challenge."- Gus Kerman, Head of Construction
+	#LOC_TerrasIgnotas_GusQuote1 = "The construction of this vessel will be a great challenge."- Gus Kerman, Head of Construction, Kerbal Space Program
 	
-	#LOC_TerrasIgnotas_JebQuote1 = "I like snacks." -Jebediah Kerman, Pilot
+	#LOC_TerrasIgnotas_JebQuote1 = "I like snacks." -Jebediah Kerman, Pilot, Kerbal Space Program
 	
-	#LOC_TerrasIgnotas_AngelQuote0 = "Screw it, we'll just make our own version." - Wild Blue Industries
+	#LOC_TerrasIgnotas_AngelQuote0 = "Screw it, we'll just make our own version." - Angelo Kerman, President, Wild Blue Industries
 	
 	#LOC_TerrasIgnotas_AngelQuote1 = "If you want to boldly go, we'll get you there."- Motto, Wild Blue Industries
   }
-  
 }
