--- a/Development/Localization/en-us.cfg
+++ b/Development/Localization/en-us.cfg
@@ -2,7 +2,7 @@ Localization
 {
   en-us
   {
-    //Description Tags
+    	//Description Tags
 	#LOC_TerrasIgnotas_BoyuDescription = Boyu. A very swirly planet with a masterfully crafted placeholder description.
 	
 	#LOC_TerrasIgnotas_HadronDescription = Hadron is the closest neutron star to Kerbin, at about 7 light-years away. Due to Hadron's age, it's hypothesized that it may have caused the Kordovician Mass Extinction, which stripped off Kerbin's Ozone Layer, and henceforth killed 95% of all life on the planet. Any planets and potentially life that may have existed close around the old Hadron are now all gone, leaving behind the outer planets to roam and rummage around Hadron as it slowly dies.
@@ -17,6 +17,10 @@ Localization
 	
 	#LOC_TERRASIGNOTAS_PlaceholderDescription = This is a very interesting planet. I wish I could tell you more, but this is a placeholder description, so I can't.
 	
+	//Easter Eggs
+	#LOC_TerrasIgnotas_PaleBlueDotA = Look again at that dot. That's here. That's home. That's us. On it everyone you love, everyone you know, everyone you ever heard of, every human being who ever was, lived out their lives. The aggregate of our joy and suffering, thousands of confident religions, ideologies, and economic doctrines, every hunter and forager, every hero and coward, every creator and destroyer of civilization, every king and peasant, every young couple in love, every mother and father, hopeful child, inventor and explorer, every teacher of morals, every corrupt politician, every "superstar," every "supreme leader," every saint and sinner in the history of our species lived there--on a mote of dust suspended in a sunbeam.
+
+ It would be nice to have that next to a picture of kerbin or something. Just an idea.
 	//Quote Tags
 	#LOC_TerrasIgnotas_LinusQuote1 = "We looked up, and for the first time truly saw a destination, and above all, Science!"- Linus Kerman, Science Representative, Kerbal Space Program
 
