fix planet name

--- a/Development/Resources/PumilioSystem/JacResources.cfg
+++ b/Development/Resources/PumilioSystem/JacResources.cfg
@@ -1,6 +1,6 @@
 //
 //	Terras Ignotas
-//	Planet: Jac
+//	Planet: Hil
 //
 //Resource types:  
 //	0 = Crustal			(Stuff you dig up)
@@ -13,7 +13,7 @@ PLANETARY_RESOURCE
 {
 	ResourceName = Blutonium
 	ResourceType = 2
-	PlanetName = Jac
+	PlanetName = Hil
 	
 	Distribution //Do this later
 	{
@@ -29,7 +29,7 @@ PLANETARY_RESOURCE
 {
 	ResourceName = Hexagen
 	ResourceType = 2
-	PlanetName = Jac
+	PlanetName = Hil
 	
 	Distribution //Do this later
 	{
@@ -45,7 +45,7 @@ PLANETARY_RESOURCE
 {
 	ResourceName = Propellium
 	ResourceType = 2
-	PlanetName = Jac
+	PlanetName = Hil
 	
 	Distribution //Do this later
 	{
