--- a/Development/KopernicusConfigs/PumilioSystem/Epochon/Epochon.cfg
+++ b/Development/KopernicusConfigs/PumilioSystem/Epochon/Epochon.cfg
@@ -1,9 +1,9 @@
 @Kopernicus:FOR[TerrasIgnotas]
 {
-	//useOnDemand = true
+	useOnDemand = true
 	Body
 	{
-		name = Epochón
+		name = Epochon
 		cacheFile = TerrasIgnotas/Cache/Epochon.bin
 		Template
 		{
@@ -13,7 +13,7 @@
 		
 		Properties
 		{
-			description = According to myth, Epochón "contains upon and within it Wisdom like bu Galaksi has not seen before or since". What secrets could the planet hold?
+			description = According to myth, Epochon "contains upon and within it Wisdom like bu Galaksi has not seen before or since". What secrets could the planet hold?
 			
 			radius = 300000
 			geeASL = 0.6
@@ -51,8 +51,8 @@
 		ScaledVersion
 		{
 			type = Vacuum
-			fadeStart = 75000
-			fadeEnd = 156000
+			fadeStart = 50000
+			fadeEnd = 100000
 			Material
 			{
 				texture = TerrasIgnotas/PluginData/PumilioSystem/Epochon/Color.png
@@ -64,73 +64,16 @@
 		{
 			Mods
 			{
-				HeightColorMap
-				{
-					blend = 0.3
-					enabled = true
-					order = 8
-					LandClasses
-					{
-						Class
-						{
-							name = Low
-							altitudeStart = 0.0
-							altitudeEnd = 0.3
-							color = RGBA(0,0,255,1)
-							lerpToNext = true
-						}
-						Class
-						{
-							name = Mid
-							altitudeStart = 0.3
-							altitudeEnd = 0.6
-							color = RGBA(0,255,0,1)
-							lerpToNext = true
-						}
-						Class
-						{
-							name = High
-							altitudeStart = 0.6
-							altitudeEnd = 1.0
-							color = RGBA(255,0,0,1)
-							lerpToNext = false
-						}
-					}
-				}
-				
 				VertexHeightMap
 				{
-					map = TerrasIgnotas/PluginData/PumilioA/Couran/Couran_Height.png
-					deformity = 100
-					scaleDeformityByRadius = false
-					enabled = false
-					order = 5
-				}
-				
-				VertexHeightNoise
-				{
-					type = RiggedMultiFractal
-					seed = 7843219
-					deformity = 15000
-					lacunarity = 1.0
-					persistance = 1.0
-					octaves = 2
-					enabled = false
-					order = 2
-				}
-				
-				VertexHeightNoise
-				{
-					type = Billow
-					seed = 73946873
-					deformity = 25675
-					lacunarity = 1.0
-					persistance = 1.0
-					octaves = 2
-					enabled = true
+					map = TerrasIgnotas/PluginData/PumilioSystem/Epochon_height.png
 					order = 1
+					enabled = true
+				}
+				
+				HeightColorMap
+				{
+					
 				}
 			}
 		}
-	}
-}
