--- a/Development/KopernicusConfigs/PumilioSystem/Epochon/Epochon.cfg
+++ b/Development/KopernicusConfigs/PumilioSystem/Epochon/Epochon.cfg
@@ -10,7 +10,6 @@
 			name = Tylo
 			removeAllPQSMods = true
 		}
-		
 		Properties
 		{
 			description = According to myth, Epochon "contains upon and within it Wisdom like bu Galaksi has not seen before or since". What secrets could the planet hold?
@@ -23,7 +22,6 @@
 			initialRotation = 0
 			isHomeWorld = false
 			timewarpAltitudeLimits = 0 1000 5000 10000 30000 50000 130000 275000
-			
 			ScienceValues
 			{
 				landedDataValue = 2
@@ -34,7 +32,6 @@
 				spaceAltitudeThreshold = 56750
 			}
 		}
-		
 		Orbit
 		{
 			referenceBody = Kerbin
@@ -47,7 +44,6 @@
 			meanAnomalyAtEpoch = 0
 			epoch = 0
 		}
-		
 		ScaledVersion
 		{
 			type = Vacuum
@@ -59,7 +55,6 @@
 				normals = TerrasIgnotas/PluginData/PumilioSystem/Epochon/Epochon_normal.png
 			}
 		}
-		
 		PQS
 		{
 			Mods
@@ -71,9 +66,11 @@
 					enabled = true
 				}
 				
-				HeightColorMap
+				VertexColorMap
 				{
-					
+					map = TerrasIgnotas/PluginData/PumilioSystem/Epochon_height.png
+					order = 2
+					enabled = true
 				}
 			}
 		}
