terrain textures and VertexHeightNoise

--- a/Development/KopernicusConfigs/PumilioSystem/Epochon/Epochon.cfg
+++ b/Development/KopernicusConfigs/PumilioSystem/Epochon/Epochon.cfg
@@ -57,20 +57,76 @@
 		}
 		PQS
 		{
+			materialType = AtmosphericExtra
+			Material
+			{
+				//Texture paths, normals, scale, and offset
+				steepTex = CTTP/Textures/snow
+				steepTexScale = 1,1
+				steepTexOffset = 0,0
+				steepBumpMap = CTTP/Textures/snow_normal
+				steepBumpMapScale = 1,1
+				steepBumpMapOffset = 0,0
+				lowTex = CTTP/Textures/snow
+				lowTexScale = 1,1
+				lowTexOffset = 0,0
+				lowBumpMap = CTTP/Textures/snow_normal
+				lowBumpMapScale = 1,1
+				lowBumpMapOffset = 0,0
+				midTex = CTTP/Textures/snow
+				midTexScale = 1,1
+				midTexOffset = 0,0
+				midBumpMap = CTTP/Textures/snow_normal
+				midBumpMapScale = 1,1
+				midBumpMapOffset = 0,0
+				highTex = CTTP/Textures/sand
+				highTexScale = 1,1
+				highTexOffset = 0,0
+				highBumpMap = CTTP/Textures/sand_normal
+				highBumpMapScale = 1,1
+				highBumpMapOffset = 0,0
+				
+				//Terrain Tiling
+				steepNearTiling = 5000
+				steepTiling = 50
+				lowNearTiling = 5000
+				lowMultiFactor = 50
+				lowBumpNearTiling = 5000
+				lowBumpFarTiling = 50
+				midNearTiling = 5000
+				midMultiFactor = 50
+				midBumpNearTiling = 5000
+				midBumpFarTiling = 50
+				highNearTiling = 5000
+				highMultiFactor = 50
+				highBumpNearTiling = 5000
+				highBumpFarTiling = 50					
+			}
 			Mods
 			{
 				VertexHeightMap
 				{
 					map = TerrasIgnotas/PluginData/PumilioSystem/Epochon_height.png
+					deformity = 20500
 					order = 1
 					enabled = true
 				}
-				
 				VertexColorMap
 				{
 					map = TerrasIgnotas/PluginData/PumilioSystem/Epochon_height.png
 					order = 2
 					enabled = true
+				}
+				VertexHeightNoise
+				{
+					deformity = 500
+					frequency = 1.0
+					octaves = 1.0
+					persistance = 1.0
+					seed = 5489256
+					noiseType = RiggedMultiFractal
+					mode = 1
+					lacunarity = 1.0
 				}
 			}
 		}
