--- a/Development/Patches/StockEdits.cfg
+++ b/Development/Patches/StockEdits.cfg
@@ -1,13 +1,15 @@
 @Kopernicus:[TerrasIgnotas]
 {
-    @Body[Sun]
+    !Body[Sun] { }
+    @Body[Kerbin]
     {
         @Orbit
         {
             PostSpawnOrbit
             {
-               referenceBody = Gobek
+                referenceBody = Kerbol
             }
         }
     }
+    
 }
