--- a/Development/Patches/StockEdits.cfg
+++ b/Development/Patches/StockEdits.cfg
@@ -3,12 +3,9 @@
     !Body[Sun] { }
     @Body[Kerbin]
     {
-        @Orbit
+        %PostSpawnOrbit
         {
-            PostSpawnOrbit
-            {
-                referenceBody = Kerbol
-            }
+            %referenceBody = Kerbol
         }
     }
     
