--- a/Development/KopernicusConfigs/Gobek/Gobek.cfg
+++ b/Development/KopernicusConfigs/Gobek/Gobek.cfg
@@ -9,14 +9,15 @@
         }
         Properties
         {
-            description = Pumilio is a wonderful sterr. The End.
+            description = If this were real life, we wouldnt be here to wonder if this was real life.
             radius = 2684201590460526
             mass = 1.2295821e+28
             geeASL =  353.13133412196
             starLuminosity = 0.20
-			rotationPeriod = 304000
-			rotates = true
-			tidallyLocked = false
+	    rotationPeriod = 304000
+	    rotates = true
+	    tidallyLocked = false
+	    displayName = Gobek
         }
         ScaledVersion
         {
