--- a/Development/KopernicusConfigs/Gobek/Gobek.cfg
+++ b/Development/KopernicusConfigs/Gobek/Gobek.cfg
@@ -6,6 +6,8 @@
         Template
         {
             name = Sun
+	    removeCoronas = true
+	    removeProgressTree = false
         }
         Properties
         {
