Super Planet System Patch 1.0
This patch should be able to reparent the stock system and all expansions to it, including OPM, Kerbol Origins, etc.

--- a/Development/Patches/StockEdits.cfg
+++ b/Development/Patches/StockEdits.cfg
@@ -1,12 +1,18 @@
-@Kopernicus:[TerrasIgnotas]
+@Kopernicus:BEFORE[TerrasIgnotas]
 {
     !Body[Sun] { }
     @Body[Kerbin]
     {
         %PostSpawnOrbit
         {
-            %referenceBody = Kerbol
+            %referenceBody = StockSun
         }
     }
-    
+    @Body:HAS[@Orbit:HAS[#referenceBody[Sun]]],HAS[!name[Kerbin]]
+    {
+        @Orbit
+        {
+            @referenceBody = StockSun
+        }
+    }
 }
