--- a/Development/KopernicusConfigs/PumilioSystem/Pumilio/Pumilio.cfg
+++ b/Development/KopernicusConfigs/PumilioSystem/Pumilio/Pumilio.cfg
@@ -9,7 +9,7 @@
         }
         Properties
         {
-            description = Pumilio is a wonderful sterr. The End.
+            description = #LOC_TerrasIgnotas_PumilioDescription 
             radius = 12882400
             mass = 8.782835e+26
             geeASL =  353.13133412196
