Optimize Stock Edits

--- a/Development/Patches/StockEdits.cfg
+++ b/Development/Patches/StockEdits.cfg
@@ -8,7 +8,7 @@
             %referenceBody = StockSun
         }
     }
-    @Body:HAS[@Orbit:HAS[#referenceBody[Sun]]],HAS[!name[Kerbin]]
+    @Body:HAS[@Orbit:HAS[#referenceBody[Sun]],!name[Kerbin]]
     {
         @Orbit
         {
