System-overhaul-friendly config

--- a/Development/Patches/StockEdits.cfg
+++ b/Development/Patches/StockEdits.cfg
@@ -1,6 +1,23 @@
 @Kopernicus:BEFORE[TerrasIgnotas]
 {
-    !Body[Sun] { }
+    @Body[Sun]
+    {
+        @name = StockSun
+        %cacheFile = TerrasIgnotas/Cache/StockSun.bin
+        Orbit
+        {
+            referenceBody = Sun
+            semiMajorAxis = 36792120000000
+            inclination = 25.324
+            eccentricity = 0.05
+            longitudeOfAscendingNode = 0
+			argumentOfPeriapsis = 0
+			meanAnomalyAtEpoch = 3.1415926535897932384626433832795
+			epoch = 0
+            mode = 0
+            cameraSmaRatioBounds = 0 0
+        }
+    }
     @Body[Kerbin]
     {
         %PostSpawnOrbit
