--- a/Development/Localization/en-us.cfg
+++ b/Development/Localization/en-us.cfg
@@ -8,7 +8,7 @@ Localization
 	#LOC_TerrasIgnotas_HadronDescription = Hadron is the closest neutron star to Kerbin, at about 7 light-years away. Due to Hadron's age, it's hypothesized that it may have caused the Kordovician Mass Extinction, which stripped off Kerbin's Ozone Layer, and henceforth killed 95% of all life on the planet. Any planets and potentially life that may have existed close around the old Hadron are now all gone, leaving behind the outer planets to roam and rummage around Hadron as it slowly dies.
 	
 	#LOC_TerrasIgnotas_GobekDescription = Gobek, which in the language of the Ancients means "Center", seems to be at the center off all the orbits of nearby stars. It's name's meaning could be a coincedence, or the Ancients could have known about this Supermassive Black Hole. MUST BE ALIENS THEN!!11ONE!
-	
+	 
 	#LOC_TerrasIgnotas_EpochonDescription = According to myth, Epochón "contains upon and within it Wisdom like bu Galaksi has not seen before or since". What secrets could the planet hold?
 	
 	#LOC_TerrasIgnotas_JilDescription = Jil is a strange gas planet, as its atmosphere is an exact copy of that of a gas planet from the bad science-fiction movie <i>1138 Planets</i>. The color, however, is unique.
@@ -17,8 +17,8 @@ Localization
 	
 	#LOC_TERRASIGNOTAS_PlaceholderDescription = This is a very interesting planet. I wish I could tell you more, but this is a placeholder description, so I can't.
 	
-	//Easter Eggs
-	#LOC_TerrasIgnotas_PaleBlueDotA = Look again at that dot. That's here. That's home. That's us. On it everyone you love, everyone you know, everyone you ever heard of, every human being who ever was, lived out their lives. The aggregate of our joy and suffering, thousands of confident religions, ideologies, and economic doctrines, every hunter and forager, every hero and coward, every creator and destroyer of civilization, every king and peasant, every young couple in love, every mother and father, hopeful child, inventor and explorer, every teacher of morals, every corrupt politician, every "superstar," every "supreme leader," every saint and sinner in the history of our species lived there--on a mote of dust suspended in a sunbeam.
+	//Easter eggs
+	#LOC_TerrasIgnotas_EE_1 = Good is good in the final hour, in the deepest pit, without hope, without witness, without reward. Virtue is only Virtue in extremis.
 
  It would be nice to have that next to a picture of kerbin or something. Just an idea.
 	//Quote Tags
