Scientific Notation yey

--- a/Development/Patches/StockEdits.cfg
+++ b/Development/Patches/StockEdits.cfg
@@ -7,7 +7,7 @@
         Orbit
         {
             referenceBody = Sun
-            semiMajorAxis = 36792120000000
+            semiMajorAxis = 3.679212E+13
             inclination = 25.324
             eccentricity = 0.05
             longitudeOfAscendingNode = 0
