--- a/TI Test GameData, INSTALL INTO 1.3.1/TerrasIgnotas/Localization/en-us.cfg
+++ b/TI Test GameData, INSTALL INTO 1.3.1/TerrasIgnotas/Localization/en-us.cfg
@@ -2,39 +2,52 @@ Localization
 {
   en-us
   {
-    //add tags
+    	//Description Tags
 	#LOC_TerrasIgnotas_BoyuDescription = Boyu. A very swirly planet with a masterfully crafted placeholder description.
 	
-	#LOC_TerrasIgnotas_HadronDescription = Hadron is the closest neutron star to Kerbin, at about 121 light-years away. Due to Hadron's age, it's hypothesized that it may have caused the Kordovician Mass Extinction, which stripped off Kerbin's Ozone Layer, and henceforth killed 95% of all life on the planet. Any planets and potentially life that may have existed close around the old Hadron are now all gone, leaving behind the outer planets to roam and rummage around Hadron as it slowly dies.
+	#LOC_TerrasIgnotas_HadronDescription = Hadron is the closest neutron star to Kerbin, at about 7 light-years away. Due to Hadron's age, it's hypothesized that it may have caused the Kordovician Mass Extinction, which stripped off Kerbin's Ozone Layer, and henceforth killed 95% of all life on the planet. Any planets and potentially life that may have existed close around the old Hadron are now all gone, leaving behind the outer planets to roam and rummage around Hadron as it slowly dies.
 	
 	#LOC_TerrasIgnotas_GobekDescription = Gobek, which in the language of the Ancients means "Center", seems to be at the center off all the orbits of nearby stars. It's name's meaning could be a coincedence, or the Ancients could have known about this Supermassive Black Hole. MUST BE ALIENS THEN!!11ONE!
+	 
+	#LOC_TerrasIgnotas_EpochonDescription = According to myth, Epochón "contains upon and within it Wisdom like bu Galaksi has not seen before or since". What secrets could the planet hold?
 	
-	#LOC_TerrasIgnotas_LinusQuote1 = "We looked up... and, for the first time, truly saw... a true destination... and above all, Science!"- Linus Kerman, Science Representative
+	#LOC_TerrasIgnotas_JilDescription = Jil is a strange gas planet, as its atmosphere is an exact copy of that of a gas planet from the bad science-fiction movie <i>1138 Planets</i>. The color, however, is unique.
+	
+	#LOC_TerrasIgnotas_PLACEHOLDER = PLACEHOLDER
+	
+	#LOC_TERRASIGNOTAS_PlaceholderDescription = This is a very interesting planet. I wish I could tell you more, but this is a placeholder description, so I can't.
+	
+	//Easter eggs
+	#LOC_TerrasIgnotas_EE_1 = Good is good in the final hour, in the deepest pit, without hope, without witness, without reward. Virtue is only Virtue in extremis.
 
-	#LOC_TerrasIgnotas_GeneQuote1 = "It had never been so clear... we were going to the stars, if the Kraken was in a good mood." - Gene Kerman, Director
+ It would be nice to have that next to a picture of kerbin or something. Just an idea.
+	//Quote Tags
+	#LOC_TerrasIgnotas_LinusQuote1 = "We looked up, and for the first time truly saw a destination, and above all, Science!"- Linus Kerman, Science Representative, Kerbal Space Program
+
+	#LOC_TerrasIgnotas_GeneQuote1 = "It had never been so clear... We were going to the stars, if the Kraken was in a good mood." - Gene Kerman, Flight Director, Kerbal Space Program
 	
-	#LOC_TerrasIgnotas_BillQuote1 = "The edge of reality got closer" - Bill Kerman, Engineer
+	#LOC_TerrasIgnotas_BillQuote1 = "The edge of reality got closer" - Bill Kerman, Engineer, Kerbal Space Program
 
 	
-	#LOC_TerrasIgnotas_ValQuote1 = "All our lives we had been told it was never going to happen... but, what do you know, it is!"- Valentina Kerman, Command Pilot
+	#LOC_TerrasIgnotas_ValQuote1 = "All our lives we had been told it was never going to happen, but what do you know, it is!"- Valentina Kerman, Pilot, Kerbal Space Program
 	
-	#LOC_TerrasIgnotas_BobQuote1 = "Our mission has never before been so important... we must go there"- Bob Kerman, Scientist, Lead Eloquence Guy
+	#LOC_TerrasIgnotas_BobQuote1 = "Our mission has never before been so important. We must go there."- Bob Kerman, Scientist, Lead Eloquence Guy, Kerbal Space Program
 	
-	#LOC_TerrasIgnotas_MortQuote1 = "Never before have we attempted such an expensive mission..."- Mortimer Kerman, Finances Manager
+	#LOC_TerrasIgnotas_MortQuote1 = "Never before have we attempted such an expensive mission."- Mortimer Kerman, Finances Manager, Kerbal Space Program
 	
-	#LOC_TerrasIgnotas_WaltQuote1 = "I think this'll make good PR"- Walt Kerman, Head of Public Relations
+	#LOC_TerrasIgnotas_WaltQuote1 = "I think this'll make good PR, guys."- Walt Kerman, Head of Public Relations, Kerbal Space Program
 	
-	#LOC_TerrasIgnotas_GusQuote1 = "The construction of this vessel will be a great challenge to build"- Gus Kerman, Head of Construction
+	#LOC_TerrasIgnotas_GusQuote1 = "The construction of this vessel will be a great challenge."- Gus Kerman, Head of Construction, Kerbal Space Program
 	
-	#LOC_TerrasIgnotas_JebQuote1 = "I like snacks." -Jebediah Kerman, Pilot
+	#LOC_TerrasIgnotas_JebQuote1 = "I like snacks." -Jebediah Kerman, Pilot, Kerbal Space Program
 	
-	#LOC_TerrasIgnotas_AngelQuote0 = "Screw it, we'll just make our own version." - Wild Blue Industries
+	#LOC_TerrasIgnotas_AngelQuote0 = "Screw it, we'll just make our own version." - Angelo Kerman, President, Wild Blue Industries
 	
 	#LOC_TerrasIgnotas_AngelQuote1 = "If you want to boldly go, we'll get you there."- Motto, Wild Blue Industries
   }
-  //Now with German translation section
   de-de
   {
-	#LOC_TerrasIgnotas_HadronDescription = Hadron ist der dem Kerbin am nächsten gelegene Neutronenstern, etwa 121 Lichtjahre entfernt. Aufgrund des Alters von Hadron wird die Hypothese aufgestellt, dass es die Massenausrottung des Kordoviziums verursacht haben könnte, die die Ozonschicht von Kerbin abgetragen hat, und von nun an 95% des gesamten Lebens auf dem Planeten getötet hat. Alle Planeten und potentielles Leben, die in der Nähe des alten Hadrons existierten, sind nun alle verschwunden und hinterlassen die äußeren Planeten, um durch die Gegend zu stöbern und zu stöbern, während Hadron langsam stirbt.
+	//Translated by Thomas P., aka TMSP, aka StollD
+	#LOC_TerrasIgnotas_HadronDescription = Hadron ist der von Kerbin aus gesehen nächste Neutronenstern, in einer Entfernung von ungefär 121 Lichtjahren. Aufgrund von Hadrons Alter wird vermutet, dass er für das kordovizische Massenaussterben verantwortlich sein könnte, bei dem Kerbins Ozonschicht zerstört, und 95% des Lebens auf dem Planeten ausgelöscht wurden. Alle inneren Planeten sowie potentielles Leben um Hadron sind nun verschwunden, die äußeren Planeten wandern weiterhin durch den Weltraum während Hadron langsam stirbt.
   }
 }
