--- a/Development/KopernicusConfigs/PumilioSystem/Maezenis/Maezenis.cfg
+++ b/Development/KopernicusConfigs/PumilioSystem/Maezenis/Maezenis.cfg
@@ -15,9 +15,23 @@
 		}
 		Properties
 		{
-			description = someone think of this
-			starLuminosity = 
-			mass = 5.4E+28
+			description = To fuse or not to fuse, that is the question.
+			starLuminosity = 0.001333
+			radius = 50177500
+			mass = 5.4E+27
+			geeASL = 143.11027351085
+			rotationPeriod = 296000
+			rotates = true
+			tidallyLocked = false
+		}
+		
+		//Do ScaledVersion
+		
+		//Do Material
+		
+		Orbit
+		{
+			
 		}
 
 	}
