--- a/Development/KopernicusConfigs/PumilioSystem/Maezenis/Maezenis.cfg
+++ b/Development/KopernicusConfigs/PumilioSystem/Maezenis/Maezenis.cfg
@@ -3,36 +3,170 @@
 	Body
 	{
 		name = Maezenis
-		
-		Debug
-		{
-			exportMesh = false
-			update = true
-		}		
+		cacheFile = TerrasIgnotas/Cache/Maezenis.bin
+		contractWeight = 0
 		Template
 		{
 			name = Sun
+			removeProgressTree = false
 		}
 		Properties
 		{
-			description = To fuse or not to fuse, that is the question.
+			description = quick someone think of one
+			displayName = Maezenis^N
 			starLuminosity = 0.001333
 			radius = 50177500
-			mass = 5.4E+27
 			geeASL = 143.11027351085
-			rotationPeriod = 296000
 			rotates = true
-			tidallyLocked = false
+			rotationPeriod = 296000
+			initialRotation = 0
+			timewarpAltitudeLimits = 0 62500 250000 250000 500000 1000000 2000000 8000000
+			ScienceValues
+			{
+				flyingLowDataValue = 16
+				flyingHighDataValue = 16
+				inSpaceLowDataValue = 16
+				inSpaceHighDataValue = 2
+				recoveryValue = 4
+				flyingAltitudeThreshold = 55000
+				spaceAltitudeThreshold = 1E+08
+			}
 		}
-		
-		//Do ScaledVersion
-		
-		//Do Material
-		
+		ScaledVersion
+		{
+			Light
+			{
+				sunlightColor = 1.0, 0.4235, 0.0, 1.0
+				sunlightShadowStrength = 0.995
+				scaledSunlightColor = 1.0, 0.4235, 0.0, 1.0
+				IVASunColor = 1.0, 0.4235, 0.0, 1.0
+				sunLensFlareColor = 1.0, 0.4235, 0.0, 1.0
+				ambientLightColor = 0.06,0.06,0.06,1
+				sunAU = 20353
+				luminosity = 1.979616E-03
+				IntensityCurve
+				{
+					key = 0 0.75 0 0
+					key = 2500000 0.75 0 -2.5E-12
+					key = 100000000 0 -2.5E-12 0
+				}
+				ScaledIntensityCurve
+				{
+					key = 0 0.75 0 0
+					key = 83333 0.75 0 -1.5E-08
+					key = 166666 0 -1.5E-08 0
+				}
+				IVAIntensityCurve
+				{
+					key = 0 0.75 0 0
+					key = 2500000 0.75 0 -2.5E-12
+					key = 100000000 0 -2.5E-12 0
+				}
+				brightnessCurve
+				{
+					key = 0 0 0 25
+					key = 0.01 0.105 0.5 0.5
+					key = 1 0.6 0.5 0.5
+					key = 5 3 0 0
+					key = 10 3 0 0
+					key = 50 2 0 0
+					key = 200 2 0 0
+				}
+			}
+			Material
+			{
+				emitColor0 = 0.2499999851, 0, 0.269230962, 1.0
+				emitColor1 = 1.0, 0.204269111, 0.623077035, 1.0
+				sunspotColor = 0.2115383, 0.0, 0.1461538, 1.0
+				sunspotPower = 2.2
+				sunspotTex = Maezenis/plugindata/maezenis.png
+				rimColor = 0.4615382, 0.1307695, 0.3038461, 1.0
+				rimPower = 0.54
+				rimBlend = 2.43
+			}
+			Coronas
+			{
+				Corona
+				{
+					Material
+					{
+						texture = Maezenis/plugindata/corona.png
+						speed = -50
+						rotation = -10
+					}
+				}
+				Corona
+				{
+					Material
+					{
+						texture = Maezenis/plugindata/corona.png
+						speed = 100
+						rotation = 5
+					}
+				}
+			}
+		}
 		Orbit
 		{
-			
+			referenceBody = Kerbin // change this value
+			semiMajorAxis = 12000000 // change this value
+			eccentricity = 0.027
+			inclination = 5.550
+			longitudeOfAscendingNode = 68
+			argumentOfPericenter = 300
+			meanAnomalyAtEpoch = 180
+			epoch = 2000.0101
+			color = 0.7215, 0.0, 0.5137, 1.0
 		}
-
+		Atmosphere
+		{
+			enabled = true
+			oxygen = false
+			maxAltitude = 250000
+			adiabaticIndex = 1.53389
+			atmosphereMolarMass = 0.02190
+			staticPressureASL = 0.1510
+			pressureCurve
+			{
+				key = 0 0.1510 0 0
+				key = 15625 0.0755 0 0
+				key = 31250 0.03775 0 0
+				key = 46875 0.01888 0 0
+				key = 62500 0.00944 0 0
+				key = 78125 0.00472 0 0
+				key = 93750 0.00236 0 0
+				key = 109375 0.00118 0 0
+				key = 125000 5.89843E-04 0 0
+				key = 140625 2.94921E-04 0 0
+				key = 156250 1.47461E-04 0 0
+				key = 171875 7.37304E-05 0 0
+				key = 187500 3.68652E-05 0 0
+				key = 203125 1.84326E-05 0 0
+				key = 218750 9.21631E-06 0 0
+				key = 234375 4.60815E-06 0 0
+				key = 250000 0 0 0
+			}
+			pressureCurveIsNormalized = false
+			temperatureSeaLevel = 1100
+			temperatureCurve
+			{
+				key = 0 1100 -3.1244E-05 -3.1244E-05
+				key = 25000 2560 -1.5622E-05 -1.5622E-05
+				key = 50000 3355 -7.811E-06 -7.811E-06
+				key = 75000 3710 -3.9055E-06 -3.9055E-06
+				key = 100000 1855 -1.9527E-06 -1.9527E-06
+				key = 125000 927.5 -9.7637E-07 -9.7637E-07
+				key = 150000 2782.5 -4.8818E-07 -4.8818E-07
+				key = 175000 8347.5 -2.4409E-07 -2.4409E-07
+				key = 200000 2086 -1.2204E-07 -1.2204E-07
+				key = 225000 521 -6.1023E-08 -6.1023E-08
+				key = 250000 2608 0 0
+			}
+			temperatureCurveIsNormalized = false
+			AtmosphereFromGround
+			{
+				waveLength = 0.0, 0.0, 0.0, 0.5
+			}
+		}
 	}
 }
