--- a/Development/KopernicusConfigs/PumilioSystem/Epochon/Epochon.cfg
+++ b/Development/KopernicusConfigs/PumilioSystem/Epochon/Epochon.cfg
@@ -12,7 +12,7 @@
 		}
 		Properties
 		{
-			description = According to myth, Epochon "contains upon and within it Wisdom like bu Galaksi has not seen before or since". What secrets could the planet hold?
+			description = According to myth, Epochon "contains upon and within it wisdom like 'bu Galaksi' has not seen before or since". What secrets could the planet hold?
 			
 			radius = 300000
 			geeASL = 0.6
