almost done with Acloh

--- a/Development/KopernicusConfigs/ConfigLimbo/EpochonButInTheFuture.cfg
+++ b/Development/KopernicusConfigs/ConfigLimbo/EpochonButInTheFuture.cfg
@@ -26,7 +26,58 @@
             referenceBody = Hil
             inclination = 0
             eccentricity = 0
-            semiMajorAxis = 
+            semiMajorAxis = 500000
+            color = RGBA(0, 100,255,1)
+            longitudeOfAscendingNode = 0
+            argumentOfPeriapsis = 0
+            meanAnomalyAtEpcoh = 0
+            epcoh = 0
+        }
+        ScaledVersion
+        {
+            type = AtmosphericExtra
+            fadeStart = 560000
+            fadeEnd = 30000
+            Material
+            {
+                texture = TerrasIgnotas/PluginData/TextureLimbo/Achloh/Acloh_color.png
+                normals = TerrasIgnotas/PluginData/TextureLimbo/Achloh/Acloh_normals.png
+            }
+        }
+        PQS
+        {
+            materialType = AtmosphericExtra
+            Material
+            {
+                //TODO: Add terrain stuff
+            }
+            Mods
+            {
+                VertexHeightMap
+                {
+                    map = TerrasIgotas/PluginData/TextureLimbo/Acloh/acloh_height.png
+                    deformity = 24000
+                    order = 1
+                    enabled = true
+                }
+                VertexColorMap
+                {
+                    map = TerrasIgotas/PluginData/TextureLimbo/Acloh/acloh_color.png
+                    order = 2
+                    enabled = true
+                }
+                VertexHeightNoise
+                {
+                    deformity = 500
+                    frequency = 1.0
+                    octaves = 1.0
+                    persistance = 1.0
+                    lacunarity = 1.0
+                    seed = 6020904
+                    noiseType = RiggedMultiFractal
+                    mode = 1
+                }
+            }
         }
     }
 }
