Update and rename EpochonButInTheFuture.cfg to Acloh.cfg

--- a/Development/KopernicusConfigs/ConfigLimbo/Acloh.cfg
+++ b/Development/KopernicusConfigs/ConfigLimbo/Acloh.cfg
@@ -18,8 +18,7 @@
             tidallyLocked = true
             initialRotation = 0
             isHomeWorld = false
-            
-            //Add timewarp limits and sciencevalues      
+            timewarpAltitudeLimits = 0 1000 5000 10000 30000 67000 84000
         }
         Orbit
         {
@@ -47,10 +46,10 @@
         PQS
         {
             materialType = AtmosphericExtra
-            Material
-            {
+            //Material
+            //{
                 //TODO: Add terrain stuff
-            }
+            //}
             Mods
             {
                 VertexHeightMap
