--- a/Development/KopernicusConfigs/ConfigLimbo/Acloh.cfg
+++ b/Development/KopernicusConfigs/ConfigLimbo/Acloh.cfg
@@ -12,7 +12,7 @@
         }
         Properties
         {
-            description = TBD
+            description = What if we made some mountains but they were glose to a gas giant? No, closer than that. I said closer, Timmy! what part of closer do you not unders[CONNECTION LOST] 
             radius = 375000
             rotates = true
             tidallyLocked = true
