--- a/Development/Patches/Changelog.cfg
+++ b/Development/Patches/Changelog.cfg
@@ -9,6 +9,10 @@ KERBALCHANGELOG:NEEDS[KerbalChangelog]
         change = Added Pumilio-Maezenis System
         change = Added Gobek
         change = Initial Release!
-        chnage = For a more information, please view a detailed changelog on our GitHub at https://github.com/KSP-DDR/Terras-Ignotas/blob/changelog/Changelog.md
     }
+    VERSION
+    {
+        version = 0.1.1 //Version number, numbers only with no spaces!
+        change = Fixed load failure due to missing MM patch
+    }	
 }
