make it only appear for new games

--- a/Development/TI_Screamer.cfg
+++ b/Development/TI_Screamer.cfg
@@ -3,7 +3,7 @@ SCREAM
     name = TI_Welcome
     once = true
     delay = 1.0
-    condition = IsInSpaceCenter
+    condition = IsInSpaceCenter, IsNewGame
     type = PopupDialog
     position = 100,100
     title = Welcome to a new Era of Space Exploration!
